--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@tanstack/react-query-devtools": "^5.81.2",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.5.2",
     "react-quill-new": "^3.4.6",
     "react-router-dom": "^7.6.2",
     "tailwind-merge": "^3.3.1",
